Minor UI changes to the IDE

--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/List.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/List.cshtml
@@ -35,7 +35,9 @@
 										}
 									</td>
 									<td class="w-20 text-right">
-										<i class="fal fa-times" data-verb="remove"></i>
+                                        <div data-verb="remove">
+                                            <i class="fal fa-times" data-verb="remove"></i>
+                                        </div>
 									</td>
 								</tr>}
 						}
