--- a/App/TomPIT.App.UI/Views/UIInjectionView.cshtml
+++ b/App/TomPIT.App.UI/Views/UIInjectionView.cshtml
@@ -13,7 +13,7 @@
         <ul>
             @foreach (var view in views)
             {
-                <li data-selector="@view.Selector" data-inject="@view.InjectionMode" class="@view.ContainerCss">
+                <li data-selector="@view.Selector" data-inject="@view.InjectionMode" data-partial-name="@view.Partial" class="@view.ContainerCss">
                     @await Html.TP().Partial.Render(view.Partial)
                 </li>
             }
