--- a/Development/TomPIT.Development.UI/Views/QA/ApiTest.cshtml
+++ b/Development/TomPIT.Development.UI/Views/QA/ApiTest.cshtml
@@ -27,7 +27,7 @@
     </environment>
 
     <environment names="Development">
-		<link rel="stylesheet" type="text/css" href="~/Assets/Styles/development.css" />
+        <link rel="stylesheet" type="text/css" href="~/Assets/Styles/development.css" />
         <script src="~/Assets/Scripts/ide.js"></script>
         <script src="~/Assets/Scripts/textEditor.js"></script>
     </environment>
@@ -82,6 +82,9 @@
                         </div>
                         <div class="form-group pt-1">
                             <button type="button" class="btn btn-primary" id="buttonSubmit">Submit</button>
+                            <button type="button" class="btn btn-light" data-tp-tag="toolbar-action" id="btnResetBody">
+                                Reset body
+                            </button>
                             <div class="float-right">
                                 <div class="btn-toolbar">
                                     <div class="btn-group">
@@ -245,6 +248,25 @@
         });
     });
 
+    $('#btnResetBody').click(function () {
+        var api = $('#editApi').dxSelectBox('instance').option('value');
+
+        tompit.post({
+            url: '@Url.RouteUrl("sys.apitest.SelectDefaultOperationBody")',
+            data: {
+                'operation': api
+            },
+            progress: tompit.findProgress('#ide'),
+            onSuccess: function (data) {
+                $('#tabRequest').tab('show');
+                textEditorRequestBody.setValue(JSON.stringify(data));
+
+                textEditorRequestBody.updateOptions({ readOnly: false });
+                textEditorRequestBody.getAction('editor.action.formatDocument').run();
+            }
+        });
+    });
+
     $('#btnSave').click(function () {
         if (!DevExpress.validationEngine.validateGroup('form').isValid)
             return;
@@ -273,8 +295,14 @@
         }
     });
 
+    const operationsList = @Html.Raw(Html.TP().JavaScript.Array(Model.Operations));
+
 	$('#editApi').dxSelectBox({
-		items: @Html.Raw(Html.TP().JavaScript.Array(Model.Operations)),
+        dataSource: new DevExpress.data.DataSource({
+            store: operationsList,
+            paginate: true,
+            pageSize: 10
+        }),
 		searchEnabled: true
     }).dxValidator({
         validationRules: [{
@@ -282,6 +310,7 @@
         }],
         validationGroup: 'form'
     });
+
 
     $('#editTitle').dxTextBox({
         maxLength: 128,
@@ -335,7 +364,6 @@
             }
         });
     });
-
 
     function refreshExisting() {
         tompit.post({
