Add collapsible sides and grouped bars to IDE

--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Toolbar.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Toolbar.cshtml
@@ -9,7 +9,7 @@
 @if (groups.Count() == 0) { return; }
 
 <div id="devToolbar">
-	<div class="btn-toolbar dev-toolbar justify-content-between" role="toolbar">
+	<div class="btn-toolbar dev-toolbar justify-content-between mx-4" role="toolbar">
 		@foreach (var i in groups)
 		{
 			<div class="btn-group" role="group">
