--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
@@ -40,9 +40,9 @@
             model.fileName = '@Model.Element.Title';
             model.microService = '@Model.Environment.Context.MicroService.Name';
 
-            model.updateOptions({
-                tabSize: 3
-            });
+            //model.updateOptions({
+            //    tabSize: 3
+            //});
 
             textEditorWidget.activateModel(model.id, model.fileName, model.microService);
 
@@ -58,6 +58,8 @@
                     'codeLens': @Html.TP().JavaScript.Bool((features & LanguageFeature.CodeLens) == LanguageFeature.CodeLens)
                 });
             }
+        } else {
+            textEditorWidget.activateModel(model.id, model.fileName, model.microService);
         }
 
         textEditorState.setTargetProperty('@Model.PropertyName');
