Fix manifest types not getting matched due to namespaces Fix localization not working on login page Fix IDE indents

--- a/Development/TomPIT.Development.UI/Views/Ide/Designers/VersionControlChanges.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Ide/Designers/VersionControlChanges.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TomPIT.Development.Designers.VersionControlChangesDesigner
 
 <div class="btn-toolbar">
-    <div class="btn-group btn-group-sm">
+    <div class="btn-group btn-group-sm mx-4">
         <button type="button" class="btn btn-sm btn-light disabled" id="btnCommit"><i class="fal fa-code-commit"></i>Commit</button>
         <button type="button" class="btn btn-sm btn-light disabled" id="btnUndo"><i class="fal fa-undo-alt"></i>Undo</button>
     </div>
