Add stack trace log to errors when in development stage Fix app test and IDE resizing issues

--- a/Development/TomPIT.Development.UI/Views/QA/ApiTest.cshtml
+++ b/Development/TomPIT.Development.UI/Views/QA/ApiTest.cshtml
@@ -207,6 +207,7 @@
         language: 'json',
         onCreated: function (sender, instance) {
             textEditorRequestBody = instance;
+            sender.registerForObservation(document.querySelector('#navRequestBody'));
         }
     });
 
@@ -217,6 +218,7 @@
         onCreated: function (sender, instance) {
             instance.updateOptions({ readOnly: true });
             textEditorResponseBody = instance;
+            sender.registerForObservation(document.querySelector('#navResponseBody'));
         }
     });
 
