--- a/Development/TomPIT.Ide.UI/Views/Ide/Ide.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Ide.cshtml
@@ -115,7 +115,7 @@
             textEditor = instance;
             textEditorWidget = sender;
             textEditor.layout();
-            textEditorState.registerForObservation(document.querySelector('#devTextDesigner'));
+            textEditorState.registerForObservation(document.querySelector('#devDesignerSizeBox'));
             initTextEditor();
         }
     });
