--- a/Development/TomPIT.Development.UI/Views/Shared/DevHeader.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Shared/DevHeader.cshtml
@@ -7,9 +7,9 @@
 <environment names="Development">
     <link rel="stylesheet" type="text/css" href="~/Assets/Fonts/OpenSans/opensans.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="~/Assets/Libraries/DevExtreme/Latest/dx.common.css" />
+    <link rel="stylesheet" type="text/css" href="~/Assets/Libraries/DevExtreme/Latest/css/dx.common.css" />
     @*<link rel="stylesheet" type="text/css" href="~/Assets/Libraries/DevExtreme/Latest/dx.light.css" />*@
-    <link rel="stylesheet" type="text/css" href="~/Assets/Libraries/DevExtreme/Latest/dx.material.blue.light.css" />
+    <link rel="stylesheet" type="text/css" href="~/Assets/Libraries/DevExtreme/Latest/css/dx.material.blue.light.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/iot.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/ide.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/development.css" />
@@ -22,8 +22,8 @@
     <script src="~/Assets/Scripts/bootstrap.js"></script>
     <script src="~/Assets/Scripts/jquery-ui-1.12.1.js"></script>
     <script src="~/Assets/Libraries/Knockout/Latest/knockout.js"></script>
-    <script src="~/Assets/Libraries/DevExtreme/Latest/dx.all.js"></script>
-    <script src="~/Assets/Libraries/Underscore/1.9.1/underscore.js"></script>
+    <script src="~/Assets/Libraries/Underscore/underscore.js"></script>
+    <script src="~/Assets/Libraries/DevExtreme/Latest/js/dx.all.js"></script>
     <script src="~/Assets/Scripts/ajax.js"></script>
     <script src="~/Assets/Scripts/progress.js"></script>
     <script src="~/Assets/Scripts/toastr.js"></script>
