Fix issues with component properties Fix issues with management interfaces Fix marketplace login issues Fix JS and manifests not compiling for management Add version display to package properties

--- a/Development/TomPIT.Ide.UI/Views/Ide/Editors/Check.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Editors/Check.cshtml
@@ -15,6 +15,7 @@
 <script>
         $('[name="@Model.Name"]').dxCheckBox({
         value: @val,
+        disabled: @Html.TP().JavaScript.Render(Model.IsReadOnly),
         onValueChanged: function (e) {
             ide.saveProperty({
                 data: {
