--- a/Development/TomPIT.Ide.UI/Views/Ide/Editors/Date.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Editors/Date.cshtml
@@ -48,6 +48,7 @@
 <script>
     $('[name="@Model.Name"]').dxDateBox({
         stylingMode: 'underlined',
+		  disabled: @Html.TP().JavaScript.Render(Model.IsReadOnly),
 		 width: '100%',
 		  @if (!isNull) {
 			  <text>
