--- a/Development/TomPIT.Ide.UI/Views/Ide/Editors/Number.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Editors/Number.cshtml
@@ -13,6 +13,7 @@
 <script>
     $('[name="@Model.Name"]').dxNumberBox({
         stylingMode: 'underlined',
+        disabled: @Html.TP().JavaScript.Render(Model.IsReadOnly),
         width: '100%',
         step: 1,
         mode:'text',
