--- a/Development/TomPIT.Ide.UI/Views/Ide/Editors/Tag.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Editors/Tag.cshtml
@@ -48,6 +48,7 @@
 
 <script>
     $('[name="@Model.Name"]').dxTagBox({
+		 disabled: @Html.TP().JavaScript.Render(Model.IsReadOnly),
 	stylingMode: 'underlined',
         width: '100%',
         @if (Model.Validation.MaxLength.MaxLength > 0)
